--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    width: 1140px;
 }
 
 .info-cards{
@@ -14,6 +14,10 @@
 @media screen and (width > 375px) and (width < 1440px){
     .app{
         grid-template-columns: 1fr;
+        padding-inline-end: 1rem;
+        width: 100%;
+    gap: 3rem;
+
     }
     .info-cards{
         grid-template-columns: 1fr;
