--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -2,9 +2,9 @@
 .profile__card {
     --_font-size: 2.5rem;
   --_border-radius: 15px;
-  --_width: 250px;
+  --_width: 200px;
   width: var(--_width);
-  justify-self: flex-end;
+  justify-self: center;
 }
 
 .profile__card__top {
